<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/black"
    android:id="@+id/main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/add_rolls"
        android:textSize="16sp"
        android:textColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="12sp"
                android:textColor="@color/cream" />

            <Spinner
                android:id="@+id/rolls_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/salmon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quanity"
                android:textSize="12sp"
                android:textColor="@color/cream" />

            <EditText
                android:id="@+id/quantity_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:inputType="number"
                android:hint="@string/counts"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textColorHint="@color/cream" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wishes"
                android:textSize="12sp"
                android:textColor="@color/cream" />

            <EditText
                android:id="@+id/notes_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:hint="@string/more_sauce"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textColorHint="@color/cream" />

            <Button
                android:id="@+id/add_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="@drawable/button_cta"/>

            <Button
                android:id="@+id/back_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="16dp"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@color/cream"
            android:background="@drawable/button" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>